# BuildingWithLLM

./: .env.example  .gitignore  README.md  pyproject.toml
lec1/: 01_chat_generation.py  02_request_response.py  03_prompt_engineering.py
lec10/: 01_auto_function_calling.py  02_manual_function_calling.py  03_multiple_tools.py  04_memory_tool.py  05_chart_creation.py  06_agentic_loop.py  07_crud_operations.py  08_forced_tool_use.py  README.md
lec12/: 01_google_search_api.py  01_web_search_api.py  02_browser_automation.py  03_multimodal_screen_understanding.py  04_prompt_injection.py
lec13/: 01_code_execution.py  02_docker_code_execution.py  02_mcp_server.py  03_mcp_client.py  03_mcp_server.py  04_mcp_client.py  04_skill.py  05_skill.py  README.md
lec2/: 01_recipe_extractor.py  02_content_moderation.py  03_recursive_structure.py
lec3/: README.md  docker-compose.yml
lec3/alembic/: env.py
lec3/alembic/versions/: ad86e2b844db_create_items_table.py
lec3/backend/: database.py  main.py  models.py
lec3/frontend/src/routes/: +page.svelte
lec4/: README.md  docker-compose.yml
lec4/alembic/: env.py
lec4/alembic/versions/: 001_create_documents_table.py
lec4/backend/: database.py  main.py  models.py
lec5/: README.md  sample_document.txt  sample_document_story.txt
lec5/alembic/: env.py
lec5/backend/: __init__.py  database.py  main.py
lec5/frontend/: package.json
lec6/: README.md
lec7/: README.md  hybrid_search_reranking.py  tfidf_retrieval.py
template/: README.md  docker-compose.yml
template/backend/: main.py
template/frontend/: package-lock.json
(+4 files in other folders)
